# skyvafnir-network-tester

./: Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: release.yaml
deploy/skyvafnir-network-test/: Chart.yaml  values-azure.yaml  values-local.yaml  values.yaml
deploy/skyvafnir-network-test/templates/: NOTES.txt  _helpers.tpl  allow_egress_network_policy.yaml  allow_ingress_network_policy.yaml  config.yaml  deny_all_network_policy.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  service.yaml  serviceaccount.yaml
service/: core.py  log_config.py  main.py  models.py
service/templates/: index.html
skyvafnir-network-test/: core.py  log_config.py  main.py
skyvafnir_network_test/: log_config.py  main.py  models.py
skyvafnir_network_test/templates/: index.html
templates/: index.html
