[tool.poetry]
name = "skyvafnir-infra-test"
version = "0.1.0"
description = ""
authors = ["Gissur Þórhallsson <gissur@themainframe.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
requests = "^2.28.1"
Jinja2 = "^3.1.2"
python-json-logger = "^2.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

